# DrGBA

./: CMakeLists.txt  LICENSE-0BSD  README.md
CMakeModules/: DetectArchitecture.cmake
src/: CMakeLists.txt
src/common/: assert.cpp  assert.h  bit_util.h  common_types.h  unlikely.h
src/core/: constants.h  state.h
src/core/cpu/: cpu_state.cpp  cpu_state.h
src/core/cpu/decoder/: arm_instruction_class.h  bit_string.h  decode_thumb.cpp  decode_thumb.h  thumb_encodings.inc.h  thumb_instruction_format.h
src/ui/: main.cpp
test/: CMakeLists.txt  test_main.cpp
test/core/cpu/decoder/: test_decode_thumb.cpp
